mega updates, site looks good, added social share buttons

--- a/_includes/post-footer.html
+++ b/_includes/post-footer.html
@@ -10,20 +10,14 @@
   <!--  all plugins and all scripts in one file each, to minimize http requests
         http://html5boilerplate.com/docs/plugins.js-and-script.js -->
   <script src="{{ site.baseurl }}/js/plugins.js"></script>
-
-  <script src="https://raw.github.com/jamescryer/grumble.js/master/js/Bubble.js"></script>
-  <script src="https://raw.github.com/jamescryer/grumble.js/master/js/jquery.grumble.min.js"></script>
   <script src="{{ site.baseurl }}/js/scripts.js"></script>
 
-  <!--  asynchronous google analytics, replace 'UA-XXXXX-X'
-        mathiasbynens.be/notes/async-analytics-snippet -->
-<!-- 
   <script>
-    var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
+    var _gaq=[['_setAccount','UA-18687536-1'],['_trackPageview']];
     (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
     g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
     s.parentNode.insertBefore(g,s)}(document,'script'));
   </script>
- -->
+
 </body>
 </html>
