--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,15 +12,12 @@
   <script src="js/plugins.js"></script>
   <script src="js/scripts.js"></script>
 
-  <!--  asynchronous google analytics, replace 'UA-XXXXX-X'
-        mathiasbynens.be/notes/async-analytics-snippet -->
-<!-- 
   <script>
-    var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
+    var _gaq=[['_setAccount','UA-18687536-1'],['_trackPageview']];
     (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
     g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
     s.parentNode.insertBefore(g,s)}(document,'script'));
   </script>
- -->
+
 </body>
 </html>
