--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,11 +1,14 @@
 {% include post-header.html %}
-	<div id="grid">
-	<section role="main">
+<div id="grid">
+
+	{% include nav.html %}
+
+	<section role="main" class="light-area">
 		<h1 class="hN alpha">{{ page.title }}</h1>
-		<a href="#" class="gridder alpha">☰</a>
+		<a href="#" class="gridder alpha txt-blue">☰</a>
 		{{ content }}
 
 		<!-- <p class="freight"><i>{{ page.category }}</i></p> -->
 	</section>
-	</div>
+</div>
 {% include post-footer.html %}
