--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -47,7 +47,7 @@
 			  fjs.parentNode.insertBefore(js, fjs);
 			}(document, 'script', 'facebook-jssdk'));</script>
 
-			<div class="fb-like" data-href="http://lab.zacharykain.com/webcraft" data-send="true" data-layout="button_count" data-width="120" data-show-faces="false" data-colorscheme="dark" data-font="lucida grande"></div>
+			<div class="fb-like" data-href="http://lab.zacharykain.com/webcraft" data-send="false" data-layout="button_count" data-width="80" data-show-faces="false" data-colorscheme="dark" data-font="lucida grande"></div>
 		</nav>
 	</footer>
 </div>
