--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,35 +19,40 @@
 				<li class="hN delta"><a data-icon="✦" class="sans icon txt-white" href="">About</a></li>
 				<li class="hN delta"><a data-icon="❦" class="sans icon txt-white" href="">Colophon</a></li>
 			</ul>
+		</nav>
 
 			<!-- twitter button -->
-			<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://lab.zacharykain.com/webcraft. t" data-text="Check out Web-Craft, a free web design curriculum" data-via="zakkain">Tweet</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-			
-			<!-- google+ button -->
-			<div class="g-plusone" data-size="medium" data-href="lab.zacharykain.com/webcraft"></div>
-
-			<!-- Place this render call where appropriate -->
-			<script type="text/javascript">
-			  (function() {
-			    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-			    po.src = 'https://apis.google.com/js/plusone.js';
-			    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-			  })();
-			</script>
+			<div class="social">
+				<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://lab.zacharykain.com/webcraft. t" data-text="Check out Web-Craft, a free web design curriculum" data-via="zakkain">Tweet</a>
+				<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+			</div>
 
 			<!-- facebook button -->
-			<div id="fb-root"></div>
+			<div class="social">
+				<div id="fb-root"></div>
 
-			<script>(function(d, s, id) {
-			  var js, fjs = d.getElementsByTagName(s)[0];
-			  if (d.getElementById(id)) return;
-			  js = d.createElement(s); js.id = id;
-			  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=364670606909953";
-			  fjs.parentNode.insertBefore(js, fjs);
-			}(document, 'script', 'facebook-jssdk'));</script>
+				<script>(function(d, s, id) {
+				  var js, fjs = d.getElementsByTagName(s)[0];
+				  if (d.getElementById(id)) return;
+				  js = d.createElement(s); js.id = id;
+				  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=364670606909953";
+				  fjs.parentNode.insertBefore(js, fjs);
+				}(document, 'script', 'facebook-jssdk'));</script>
 
-			<div class="fb-like" data-href="http://lab.zacharykain.com/webcraft" data-send="false" data-layout="button_count" data-width="80" data-show-faces="false" data-colorscheme="dark" data-font="lucida grande"></div>
-		</nav>
+				<div class="fb-like" data-href="http://lab.zacharykain.com/webcraft" data-send="false" data-layout="button_count" data-width="80" data-show-faces="false" data-colorscheme="dark" data-font="lucida grande"></div>
+			</div>
+			
+			<!-- google+ button -->
+			<div class="social">
+				<div class="g-plusone" data-size="medium" data-href="lab.zacharykain.com/webcraft"></div>
+
+				<script type="text/javascript">
+				  (function() {
+				    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+				    po.src = 'https://apis.google.com/js/plusone.js';
+				    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+				  })();
+				</script>
+			</div>
 	</footer>
 </div>
