media query on fixed sidebar so it doesn't break <800px

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -16,7 +16,7 @@
 		<nav role="navigation">
 			<ul>
 				<li class="hN delta"><a data-icon="✦" class="sans icon txt-white" href="{{ site.baseurl }}/about">About</a></li>
-				<li class="hN delta"><a data-icon="☁" class="sans icon txt-white" href="//github.com/zakkain/webcraft">Get Source</a></li>
+				<li class="hN delta"><a data-icon="⤽" class="sans icon txt-white" href="//github.com/zakkain/webcraft">Get Source</a></li>
 				<li class="hN delta"><a data-icon="❦" class="sans icon txt-white" href="{{ site.baseurl }}/colophon">Colophon</a></li>
 			</ul>
 		</nav>
@@ -37,7 +37,7 @@
 				
 				<style>
 				.fb_edge_widget_with_comment span.fb_edge_comment_widget {
-				top: -300px !important;
+				top: -200px !important;
 				}
 				</style>
 			</div>
