add new post, starting to add content

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -60,5 +60,11 @@
 				  })();
 				</script>
 			</div>
+
+			<!-- github fork button -->
+			<div class="social github">
+				<a href="https://github.com/zakkain/webcraft" class="gitforked-button gitforked-forks">Fork</a>
+				<script src="http://gitforked.com/api/1.1/button.js" type="text/javascript"></script>
+			</div>
 	</footer>
 </div>
