--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@
 
 	<section role="main" class="light-area">
 		<h1 class="hN alpha">{{ page.title }}</h1>
-		<a href="#" class="gridder alpha txt-blue">☰</a>
+		<a href="#" class="gridder alpha">☰</a>
 		{{ content }}
 
 		<!-- <p class="freight"><i>{{ page.category }}</i></p> -->
