added some responsiveness

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,10 +4,10 @@
 		<h1 class="hN alpha title"><a class="txt-white" href="{{ site.baseurl }}">Web-Craft</a></h1>
 		<nav role="navigation">
 			<ul>
-				<li class="hN gamma"><a data-icon="═" class="sans brand icon txt-blue" href="{{ site.baseurl }}/fundamentals">Fundamentals</a></li>
-				<li class="hN gamma"><a data-icon="▵" class="sans brand icon txt-blue" href="{{ site.baseurl }}/patterns">Patterns</a></li>
+				<li class="hN gamma"><a data-icon="═" class="sans brand icon txt-white" href="{{ site.baseurl }}/fundamentals">Fundamentals</a></li>
+				<li class="hN gamma"><a data-icon="▵" class="sans brand icon txt-white" href="{{ site.baseurl }}/patterns">Patterns</a></li>
 				<li class="hN gamma"><a data-icon="¶" class="sans brand icon txt-red" href="{{ site.baseurl }}/journal">Journal</a></li>
-				<li class="hN gamma"><a data-icon="⇧" class="sans brand icon txt-green flipped" href="{{ site.baseurl }}/primer">Primer</a></li>
+				<li class="hN gamma"><a data-icon="⇮" class="sans brand icon txt-green flipped" href="{{ site.baseurl }}/primer">Primer</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -15,8 +15,8 @@
 	<footer class="stick-bottom">
 		<nav role="navigation">
 			<ul>
+				<li class="hN delta"><a data-icon="⥂" class="sans icon txt-white" href="//github.com/zakkain/webcraft">Get Source</a></li>
 				<li class="hN delta"><a data-icon="✦" class="sans icon txt-white" href="{{ site.baseurl }}/about">About</a></li>
-				<li class="hN delta"><a data-icon="⤽" class="sans icon txt-white" href="//github.com/zakkain/webcraft">Get Source</a></li>
 				<li class="hN delta"><a data-icon="❦" class="sans icon txt-white" href="{{ site.baseurl }}/colophon">Colophon</a></li>
 			</ul>
 		</nav>
