moved social scripts to footer

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,8 @@
 <div class="anchor-panel dark-area">
 	<header>
-		<span class="symbol txt-green">⚒</span>
+		<div>
+			<span class="symbol txt-green">⚒</span>
+		</div>
 		<h1 class="hN alpha title"><a class="txt-white" href="{{ site.baseurl }}">Web-Craft</a></h1>
 		<nav role="navigation">
 			<ul>
@@ -25,13 +27,14 @@
 			<div class="social facebook">
 				<div id="fb-root"></div>
 
-				<script>(function(d, s, id) {
-				  var js, fjs = d.getElementsByTagName(s)[0];
-				  if (d.getElementById(id)) return;
-				  js = d.createElement(s); js.id = id;
-				  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=364670606909953";
-				  fjs.parentNode.insertBefore(js, fjs);
-				}(document, 'script', 'facebook-jssdk'));</script>
+				<script>
+				//   (function(d, s, id) {
+				//   var js, fjs = d.getElementsByTagName(s)[0];
+				//   if (d.getElementById(id)) return;
+				//   js = d.createElement(s); js.id = id;
+				//   js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=364670606909953";
+				//   fjs.parentNode.insertBefore(js, fjs);
+				// }(document, 'script', 'facebook-jssdk'));</script>
 
 				<div class="fb-like" data-href="http://lab.zacharykain.com/webcraft" data-send="false" data-layout="button_count" data-width="90" data-show-faces="false" data-font="lucida grande"></div>
 				
@@ -45,7 +48,7 @@
 			<!-- twitter button -->
 			<div class="social twitter">
 				<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://lab.zacharykain.com/webcraft. t" data-text="Check out Web-Craft, a free web design curriculum" data-via="zakkain">Tweet</a>
-				<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+				<script>//!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 			</div>
 			
 			<!-- google+ button -->
@@ -53,18 +56,17 @@
 				<div class="g-plusone" data-size="medium" data-href="lab.zacharykain.com/webcraft"></div>
 
 				<script type="text/javascript">
-				  (function() {
-				    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-				    po.src = 'https://apis.google.com/js/plusone.js';
-				    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-				  })();
+				  // (function() {
+				  //   var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+				  //   po.src = 'https://apis.google.com/js/plusone.js';
+				  //   var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+				  // })();
 				</script>
 			</div>
 
 			<!-- github fork button -->
 			<div class="social github">
 				<a href="https://github.com/zakkain/webcraft" class="gitforked-button gitforked-forks">Fork</a>
-				<script src="http://gitforked.com/api/1.1/button.js" type="text/javascript"></script>
 			</div>
 	</footer>
 </div>
