--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,6 +11,7 @@
         http://html5boilerplate.com/docs/plugins.js-and-script.js -->
   <script src="js/plugins.js"></script>
   <script src="js/scripts.js"></script>
+  <script src="http://gitforked.com/api/1.1/button.js" type="text/javascript"></script>
 
   <script>
     var _gaq=[['_setAccount','UA-18687536-1'],['_trackPageview']];
