--- a/_includes/post-footer.html
+++ b/_includes/post-footer.html
@@ -11,6 +11,10 @@
         http://html5boilerplate.com/docs/plugins.js-and-script.js -->
   <script src="{{ site.baseurl }}/js/plugins.js"></script>
   <script src="{{ site.baseurl }}/js/scripts.js"></script>
+  <script src="http://gitforked.com/api/1.1/button.js" type="text/javascript"></script>
+  
+  <script src="{{ site.baseurl }}/prettify/prettify.js"></script>
+  <script>prettyPrint();</script>
 
   <script>
     var _gaq=[['_setAccount','UA-18687536-1'],['_trackPageview']];
