--- a/css/style.css
+++ b/css/style.css
@@ -711,10 +711,10 @@
       padding-bottom: 0.75rem;
       background-color: #f0f0f0;
    }
-   blockquote .attribution:before {
+   .attribution:before {
       content: "— ";
    }
-   blockquote .attribution {
+   .attribution {
       font-style: italic;
       text-indent: 0;
       margin: 0;
@@ -769,6 +769,31 @@
       font-weight: 400;
       font-style: normal;
    }
+   .serif {
+      font-family: "chaparral-pro", Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
+      font-weight: 400;
+      font-style: normal;
+   }
+   .kicker {
+      margin-top: 0;
+      font-style: italic;
+      letter-spacing: -0.1rem;
+   }
+
+   #top {
+      font-size: 112px;
+      font-size: 7rem;
+      line-height: 0.857142857;
+      margin-top: 1.5rem;
+
+   }
+   #top .char2 { margin-left: -0.062em }
+   #top .char3 { margin-left: -0.019em }
+   #top .char8 { margin-left: -0.019em }
+   #top .char7 { margin-left: -0.025em }
+   #top .char6 { margin-left: -0.019em }
+   #top .char9 { margin-left: 0.019em }
+   #top .char4 { margin-left: 0.006em }
 
 
 /*
@@ -939,6 +964,10 @@
       padding: 24px 48px;
       padding: 1.5em 3em; /* 24px ÷ 16 = 1.5 (24 = 24 × 1) */
    }
+   .page.extended {
+      width: 48em;
+      margin-left: 24em;
+   }
 
 /* social
  */
@@ -1095,15 +1124,15 @@
       .anchor-panel .gamma {
          padding-top: 0;
       }
-      .stick-bottom {
-         /*position: static;*/
+   }
 
+   @media all and (max-width: 1366px) {
+      .page.extended {
+         margin-left: 27em;
       }
    }
 
-
-
-/*   @media only screen and (min-width: 320px) {
+   /*@media only screen and (min-width: 320px) {
        
    }
 
@@ -1117,11 +1146,8 @@
 
    @media only screen and (min-width: 1024px) {
 
-   }
-
-   @media only screen and (min-width: 1280px) {
-   
    }*/
+
 
 
 /*
