fix responsive shenanigans

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,7 +8,8 @@
 			<ul>
 				<li class="hN gamma"><a data-icon="═" class="sans brand icon txt-white" href="{{ site.baseurl }}/fundamentals">Fundamentals</a></li>
 				<li class="hN gamma"><a data-icon="▵" class="sans brand icon txt-white" href="{{ site.baseurl }}/patterns">Patterns</a></li>
-				<li class="hN gamma"><a data-icon="¶" class="sans brand icon txt-red" href="{{ site.baseurl }}/journal">Journal</a></li>
+				<li class="hN gamma"><a data-icon="¶" class="sans brand icon txt-white" href="{{ site.baseurl }}/journal">Journal</a></li>
+				<li class="hN gamma"><a data-icon="{}" class="sans brand icon txt-blue" href="{{ site.baseurl }}/primer">Styleguide</a></li>
 				<li class="hN gamma"><a data-icon="⇮" class="sans brand icon txt-green flipped" href="{{ site.baseurl }}/primer">Primer</a></li>
 			</ul>
 		</nav>
